# PR-CLIP-Token-Injection-9f9b7a3a

./: Apply_scores_to_clip.json  README.md  nodes.py  pyproject.toml
custom_weights/: AIsafetytokens.pt  all_scores_as_one_negative.pt  pony_scores.pt  the_secret_negative_token_is.txt
